crates/uitest/fixtures/ty_check/let_trait_const_missing_bound.snap
---
source: crates/uitest/tests/ty_check.rs
expression: diags
input_file: fixtures/ty_check/let_trait_const_missing_bound.fe
---
error[6-0003]: trait bound is not satisfied
   ┌─ let_trait_const_missing_bound.fe:12:39
   │
12 │     let _: Slot<{ <T as HasN>::N }> = todo()
   │                                       ^^^^^^ `T` doesn't implement `HasN`
